<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ideas.InfoIdeaDataFragment" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_idea_image_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_tittle_idea_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_tittle_idea_info"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/iv_idea_image_info"
                app:layout_constraintTop_toBottomOf="@+id/iv_idea_image_info" />

            <TextView
                android:id="@+id/tv_descrip_idea_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_descrip_idea_info"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_tittle_idea_info"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_tittle_idea_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_tittle_idea_info" />

            <TextView
                android:id="@+id/tv_priority_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_priority"
                app:layout_constraintEnd_toEndOf="@+id/tv_descrip_idea_info"
                app:layout_constraintStart_toStartOf="@+id/tv_descrip_idea_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_descrip_idea_info" />

            <RadioGroup
                android:id="@+id/rg_priority_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:fadingEdge="horizontal"
                android:orientation="horizontal"
                app:guidelineUseRtl="false"
                app:layout_constraintEnd_toEndOf="@+id/tv_priority_info"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_priority_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_priority_info">

                <RadioButton
                    android:id="@+id/rb_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/radio_button_low" />

                <RadioButton
                    android:id="@+id/rb_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_button_middle" />

                <RadioButton
                    android:id="@+id/rb_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_button_high" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_status_idea_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_status_idea_info"
                app:layout_constraintEnd_toEndOf="@+id/rg_priority_info"
                app:layout_constraintStart_toStartOf="@+id/rg_priority_info"
                app:layout_constraintTop_toBottomOf="@+id/rg_priority_info" />

            <RadioGroup
                android:id="@+id/rg_status_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tv_status_idea_info"
                app:layout_constraintStart_toStartOf="@+id/tv_status_idea_info"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_idea_info">

                <RadioButton
                    android:id="@+id/rb_status_pendiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/radio_button_pendiente" />

                <RadioButton
                    android:id="@+id/rb_status_en_progreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_button_en_progreso" />

                <RadioButton
                    android:id="@+id/rb_status_terminado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_button_terminado" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_add_new_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_add_detail"
                app:layout_constraintEnd_toEndOf="@+id/etNewDetail"
                app:layout_constraintStart_toStartOf="@+id/etNewDetail"
                app:layout_constraintTop_toBottomOf="@+id/etNewDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_add_new_detail"
                app:layout_constraintStart_toStartOf="@+id/btn_add_new_detail"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_new_detail"
                tools:listitem="@layout/item_detail_list" />

            <EditText
                android:id="@+id/etNewDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/button_add_detail"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/rg_status_info"
                app:layout_constraintStart_toStartOf="@+id/rg_status_info"
                app:layout_constraintTop_toBottomOf="@+id/rg_status_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>